--- a/main.tex
+++ b/main.tex
@@ -8,7 +8,7 @@
 % Math, Physics
 \usepackage{mathtools}
 \usepackage{amsfonts}
-\usepackage{physics}
+\usepackage{physics, tensor}
 
 % Margins and spacing
 \usepackage{geometry}
@@ -25,7 +25,7 @@
 \usepackage{titlesec}
 \titleformat
 {\section} % command
-{\bfseries\Large} % format
+{\sffamily\bfseries\Large} % format
 {\thesection.} % label
 {1ex} % sep
 {} % before-code
@@ -106,9 +106,11 @@
 
 Venenatis a condimentum vitae sapien pellentesque habitant morbi tristique. Condimentum id venenatis a condimentum vitae sapien. Egestas sed sed risus pretium quam vulputate. Scelerisque purus semper eget duis at tellus at urna condimentum. Vivamus arcu felis bibendum ut tristique et egestas quis. Gravida in fermentum et sollicitudin ac orci. Enim sed faucibus turpis in eu mi. Nulla pharetra diam sit amet nisl suscipit adipiscing bibendum. Eget gravida cum sociis natoque penatibus et magnis. Tortor vitae purus faucibus ornare suspendisse sed nisi. Placerat in egestas erat imperdiet sed.
 
-In \cite{Greene:1996cy}, it was dolor sit amet consectetur adipiscing elit duis. In hac habitasse platea dictumst vestibulum rhoncus est. Duis convallis convallis tellus id interdum velit laoreet id. Ultricies mi eget mauris pharetra et ultrices neque. In mollis nunc sed id semper risus in. Quis risus sed vulputate odio ut enim blandit. Orci dapibus ultrices in iaculis nunc. Risus commodo viverra maecenas accumsan. Pretium aenean pharetra magna ac placerat vestibulum. Nulla pellentesque dignissim enim sit amet venenatis urna. Nibh praesent tristique magna sit amet purus gravida.
-
 In hac habitasse platea dictumst quisque sagittis purus. Lorem ipsum dolor sit amet consectetur adipiscing elit pellentesque habitant. Dictumst quisque sagittis purus sit amet. Sagittis id consectetur purus ut faucibus. Pellentesque pulvinar pellentesque habitant morbi tristique senectus et. Aliquet porttitor lacus luctus accumsan tortor posuere. Tincidunt eget nullam non nisi est sit amet. Mattis aliquam faucibus purus in massa tempor nec feugiat nisl. Cursus eget nunc scelerisque viverra mauris in aliquam sem. Vel pretium lectus quam id leo. Non sodales neque sodales ut etiam. Eget nullam non nisi est sit. Suspendisse faucibus interdum posuere lorem ipsum dolor sit amet consectetur. In hendrerit gravida rutrum quisque non tellus orci. Nunc id cursus metus aliquam eleifend mi in. Nullam vehicula ipsum a arcu cursus vitae congue mauris rhoncus. Dictumst vestibulum rhoncus est pellentesque elit ullamcorper. Et malesuada fames ac turpis egestas sed tempus urna et. Turpis in eu mi bibendum neque egestas congue quisque egestas. Lectus vestibulum mattis ullamcorper velit.
+
+\begin{equation}
+  a + b = c
+\end{equation}
 
 Venenatis urna cursus eget nunc scelerisque viverra mauris in. Purus non enim praesent elementum facilisis leo vel fringilla est. Purus non enim praesent elementum facilisis leo. Id nibh tortor id aliquet lectus proin nibh. Ut venenatis tellus in metus vulputate eu scelerisque felis. Ultricies leo integer malesuada nunc. Ultricies tristique nulla aliquet enim tortor at. Lacus vel facilisis volutpat est velit egestas. Nulla facilisi morbi tempus iaculis urna id. Justo nec ultrices dui sapien eget mi proin. Molestie nunc non blandit massa enim nec dui. In massa tempor nec feugiat nisl. Ante in nibh mauris cursus mattis molestie a iaculis at.
 
@@ -122,6 +124,26 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 \end{equation}
 
 Maecenas volutpat blandit aliquam etiam. Sed egestas egestas fringilla phasellus faucibus scelerisque eleifend. Bibendum ut tristique et egestas quis ipsum. Leo vel orci porta non pulvinar neque laoreet suspendisse. Proin sed libero enim sed faucibus turpis in. Eget felis eget nunc lobortis mattis. Sit amet luctus venenatis lectus. Sed sed risus pretium quam vulputate dignissim suspendisse in. Varius quam quisque id diam vel quam. Gravida quis blandit turpis cursus in. Urna nec tincidunt praesent semper. Fusce ut placerat orci nulla pellentesque dignissim enim sit.
+
+\begin{equation}
+  \mathrm{Re} \{ e^{-i \psi} \}
+\end{equation}
+
+For Tej
+\begin{equation}
+  7 \equiv 1 \ (\mathrm{mod} \ 3)
+\end{equation}
+
+\begin{gather}
+  a = 1, 4, 7, 10, 13 \\
+  \Gamma \\
+  \gamma \quad \text{photon} \\
+  \underbrace{\mathbf{M}}_{\substack{\text{matrix or} \\ \text{linear} \\ \text{transformation}}} \underbrace{\vec{v}}_{\text{eigenvector}} = \underbrace{\lambda}_{\text{eigenvalue}} \vec{v} \\
+  R_{\mu \nu \alpha \beta} \\
+  R_{1 3 2 4} = 4.3 \\
+  M_{a b} \\
+  \tensor{R}{_\mu_\nu^\alpha_\beta}
+\end{gather}
 
 \begin{table}[ht]
   \centering
