change formatting a bit

--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass[10pt, a4paper]{article}
+\documentclass[12pt, a4paper]{article}
 
 % Fonts
 \usepackage[english]{babel}
@@ -68,7 +68,7 @@
 % Tables
 \usepackage{booktabs}
 
-\title{Lorem ipsum dolor sit amet}
+\title{Notes on Lorem ipsum dolor sit amet}
 \author{Rishi Raj}
 \date{
     \noindent\textit{Sorbonne Université, Paris, FR}\\[0.2cm]
@@ -90,11 +90,7 @@
   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tempor orci eu lobortis elementum nibh tellus. Varius vel pharetra vel turpis. Viverra maecenas accumsan lacus vel facilisis volutpat est. Non curabitur gravida arcu ac tortor. Mattis nunc sed blandit libero volutpat sed cras ornare. Etiam tempor orci eu lobortis. Netus et malesuada fames ac turpis egestas maecenas pharetra. Velit dignissim sodales ut eu sem integer. Non arcu risus quis varius quam quisque id diam vel. Lacus suspendisse faucibus interdum posuere lorem ipsum. Diam phasellus vestibulum lorem sed risus. Etiam sit amet nisl purus. Ut sem nulla pharetra diam. Nibh nisl condimentum id venenatis a.
 \end{abstract}
 
-\vfill
-
 \noindent\today
-
-\newpage
 
 \tableofcontents
 
