fix headheight warning

--- a/main.tex
+++ b/main.tex
@@ -12,7 +12,7 @@
 
 % Margins and spacing
 \usepackage{geometry}
-\geometry{left=25mm, right=25mm, top=30mm, bottom=30mm}
+\geometry{left=25mm, right=25mm, top=30mm, bottom=30mm, headheight=15pt}
 \usepackage{setspace}
 \singlespacing % or \onehalfspacing or \doublespacing
 
